package taskfusion;

public abstract class Activity {
    
}
