package taskfusion;

public class Project {
    
}
