package taskfusion;

public class RegularActivity extends Activity {
    
}
