@startuml ClassDiagramMVC
skinparam linetype ortho
skinparam Nodesep 100
' skinparam Ranksep 50
class "TaskFusion" as app{
    
}

class UserController {
    --
    + login(Emplyee e) : boolean
    + logout()
    + isLoggedIn() : boolean
    - setUser(Employee e) : boolean
}

class EmployeeController {
    --
    + employeeExist() : boolean
    + createEmployee() : Employee
}

class ProjectController {
    --
    + createProject() : Project
    + editProject(Project p, Object property, Object value) : Project
}

class Report{
    remainingWorkHours : int
    incompleteActivities : List
    --
}

class Project{
    projectNumber : int
    customer : String
    internal : boolean
    startWeek : int
    endWeek : int
    --
    + createActivity(String)
    + setTimeBudget(int)
    + setStartWeek(int)
    + setEndWeek(int)
    + setProjectLeader(Employee)
}
class ProjectActivity{
    worktimeRegistrations : List
    timeBudget : int
    --
    + setTimeBudget(int)
}
class Activity <<(A, orchid)abstract>>{
    title : String
    startWeek : int
    endWeek : int
    --
    + setEndWeek(String, int)
    + setStartWeek(String, int)
}
class RegularActivity{
    --
}

class Employee{
    initials : String
    firstName : String
    lastName : String
    --
}

app --> "1" EmployeeController : employeeController
app --> "1" ProjectController : projectController
app --> "1" UserController : userController

ProjectController --> "0..*" Project : projects
Project -> Report : generateReport(Project project)
EmployeeController --> "0..*" Employee : employees

UserController --> "0..1" Employee : user

Activity <|-- ProjectActivity
Activity <|- RegularActivity

Project --> "1" Employee : projectLeader
Project --> "0..*" Employee : employees
Project -> "0..*" ProjectActivity : activities
Employee -> "0..*" RegularActivity : regularActivities

@enduml